feat: added default template

--- a/docs/intro-guides-generator.mdx
+++ b/docs/intro-guides-generator.mdx
@@ -1,7 +1,7 @@
+---
+title:  Intro guides generator
+---
 # Intro guides generator
 
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam dolore quam nesciunt ut, minus dolorem, deserunt soluta beatae voluptate fugit aliquam molestiae in adipisci explicabo eligendi optio totam neque quisquam!
 
-# Another Article
-
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam dolore quam nesciunt ut, minus dolorem, deserunt soluta beatae voluptate fugit aliquam molestiae in adipisci explicabo eligendi optio totam neque quisquam!
